--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
      <img src="https://avatars1.githubusercontent.com/u/61999612?v=4">
   <body>
     Hello there, awesome person! 
-      <ol>
-    <li>This https://www.youtube.com/</li>
-    <li>Is an https://www.facebook.com/</li>
-    <li>Ordered list https://ani.gamer.com.tw/</li>
-</ol>
+    <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+    </ol>
   </body>
  </h1>
 </html>
