--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>My awesome web page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
  <h1>
      <img src="https://avatars1.githubusercontent.com/u/61999612?v=4">
